--- a/index.html
+++ b/index.html
@@ -1,33 +1,28 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login/Signup with Firebase</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+  <title>Welcome</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="auth-container">
-    <div id="login-form">
-      <h2>Login</h2>
-      <input type="email" id="login-email" placeholder="Email">
-      <input type="password" id="login-password" placeholder="Password">
-      <button id="login-btn">Login</button>
-      <p>Don't have an account? <a href="#" id="show-signup">Sign Up</a></p>
-    </div>
-
-    <div id="signup-form" style="display: none;">
-      <h2>Sign Up</h2>
-      <input type="email" id="signup-email" placeholder="Email">
-      <input type="password" id="signup-password" placeholder="Password">
-      <button id="signup-btn">Sign Up</button>
-      <p>Already have an account? <a href="#" id="show-login">Login</a></p>
-    </div>
+  <div class="container">
+    <h1>Welcome to the App!</h1>
+    <p>Choose an option to get started:</p>
+    <button id="login-btn">Login</button>
+    <button id="signup-btn">Sign Up</button>
   </div>
 
-  <script src="app.js"></script>
+  <script>
+    // Button click actions
+    document.getElementById("login-btn").addEventListener("click", function() {
+      window.location.href = "login.html";  // Redirect to login page
+    });
+    document.getElementById("signup-btn").addEventListener("click", function() {
+      window.location.href = "signup.html";  // Redirect to signup page
+    });
+  </script>
 </body>
 </html>
