--- a/public/main.html
+++ b/public/main.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Welcome to the Main Page!</h1>
-  <p>This is the page users are redirected to after successful login.</p>
+  <p>You are successfully logged in!</p>
 </body>
 </html>
